[package]
name = "wasm-creole-live-editor"
version = "0.1.0"
authors = ["chidea"]
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0"
wasm-bindgen-futures = "0"
wee_alloc = { version = "0" }

# perseus = { version = "0.3", features = [ "hydrate" ] }
# perseus-size-opt = "0"
# sycamore = { version = "0.7" }
sycamore = { version = "0.8.0-beta.6", features= [ "suspense" ] }
sycamore-router = "0.8.0-beta.6"
# gloo = "0"
# gloo-utils = "0"
gloo-timers = { version = "0", features = [ "futures" ] }
# reqwasm = "0"

creole-nom = "1"

# wasm-logger = "0"
log = "0"
console_error_panic_hook = "0"
console_log = "0"
js-sys = "0"

urlencoding = "2"

# [dev-dependencies]
# wasm-bindgen-test = "0"

[dependencies.web-sys]
version = "0"
features = [
  'KeyboardEvent',
  'InputEvent',
  'HtmlTextAreaElement',
  # 'Navigator',
  # 'ServiceWorkerContainer',
  'Performance',
  'PerformanceMeasure',
  "IdbDatabase",
  "IdbFactory",
  "IdbObjectStore",
  "IdbObjectStoreParameters",
  "IdbOpenDbRequest",
  "IdbKeyRange",
  "IdbRequest",
  "IdbRequestReadyState",
  "IdbTransaction",
  "IdbTransactionMode",
  "IdbVersionChangeEvent",
]

[profile.release]
# Do not perform backtrace for panic on release builds.
panic = 'abort'
# Perform optimizations on all codegen units.
codegen-units = 1
# Optimize for size.
opt-level = 's' # or 'z' to optimize "aggressively" for size
# Enable link time optimization.
lto = true